add PyPI config files

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/wallexchange/wallex-python
 license = MIT
 keywords = wallex exchange api bitcoin ethereum btc eth python client
+dependencies= pydantic requests
 project_urls =
     Bug Tracker = https://github.com/wallexchange/wallex-python/issues
     Documentation = https://api-docs.wallex.ir/
