--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = wallex-python
-version = 0.0.1
+version = 0.0.2
 author = Pourya Moghadam
 author_email = p.moghadam@msn.com
 description = Wallex Exchange Unofficial API Python Client
@@ -9,7 +9,7 @@ long_description_content_type = text/markdown
 url = https://github.com/wallexchange/wallex-python
 license = MIT
 keywords = wallex exchange api bitcoin ethereum btc eth python client
-dependencies= pydantic requests
+install_requires= pydantic requests
 project_urls =
     Bug Tracker = https://github.com/wallexchange/wallex-python/issues
     Documentation = https://api-docs.wallex.ir/
