- bug fix require packages versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = wallex-python
-version = 0.0.3
+version = 0.0.5
 author = Pourya Moghadam
 author_email = p.moghadam@msn.com
 description = Wallex Exchange Unofficial API Python Client
@@ -8,8 +8,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/wallexchange/wallex-python
 license = MIT
-keywords = wallex exchange api bitcoin ethereum btc eth python client
-install_requires= pydantic requests certifi charset-normalizer idna typing_extensions urllib3
+keywords = wallex exchange crypto api bitcoin ethereum btc eth python client
 project_urls =
     Bug Tracker = https://github.com/wallexchange/wallex-python/issues
     Documentation = https://api-docs.wallex.ir/
